feat: add login

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ SERVER_ADDR=0.0.0.0:8080
 # database configuration, support mysql, postgres, sqlite
 DB_DRIVER=sqlite
 DB_DSN=./db.sqlite
+
+# jwt configuration
+JWT_SECRET=secret
+JWT_EXPIRE_TIME=3600
